# Collisions

./: CMakeLists.txt  README.md
BoundingBox/: BoundingBox  BoundingBox.pro  CMakeLists.txt  README.md
BoundingBox/include/: NGLScene.h  Sphere.h  WindowParams.h
BoundingBox/src/: NGLScene.cpp  Sphere.cpp
RaySphere/: CMakeLists.txt  README.md  RaySphere  RaySphere.pro
RaySphere/include/: NGLScene.h  Sphere.h
RaySphere/src/: NGLScene.cpp  Sphere.cpp  main.cpp
RayTriangle/: CMakeLists.txt  README.md  RayTriangle  RayTriangle.pro
RayTriangle/include/: NGLScene.h  Triangle.h
RayTriangle/src/: NGLScene.cpp  Triangle.cpp  main.cpp
SpherePlane/: CMakeLists.txt  README.md  SpherePlane  SpherePlane.pro
SpherePlane/include/: MultiBufferIndexVAO.h  NGLScene.h  Plane.h  Sphere.h
SpherePlane/src/: MultiBufferIndexVAO.cpp  NGLScene.cpp  Plane.cpp  Sphere.cpp  main.cpp
SphereSphere/: CMakeLists.txt  README.md  SphereSphere  SphereSphere.pro
SphereSphere/include/: NGLScene.h  Sphere.h
SphereSphere/src/: NGLScene.cpp  Sphere.cpp  main.cpp
